<?xml version="1.0" encoding="utf-8"?>
<LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llFormAddUSer"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/gender" />

    <Spinner
        android:id="@+id/spGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/status" />

    <Spinner
        android:id="@+id/spStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/llSubmit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary">
        <ProgressBar
            android:id="@+id/pbSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            style="@style/Widget.AppCompat.ProgressBar"
            android:theme="@style/CircularProgress"
            android:visibility="gone" />
        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:text="@string/submit" />
    </RelativeLayout>

</LinearLayout>