<?xml version="1.0" encoding="utf-8"?>
<LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llFormContact"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/input_total_order" />

    <EditText
        android:id="@+id/etTotalOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="3dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="3dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

</LinearLayout>