<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:background="@drawable/table_header_cell_bg"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/name" />
        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/table_header_cell_bg"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/email" />
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/table_header_cell_bg"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/gender" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="@drawable/table_content_cell_bg"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@drawable/table_content_cell_bg"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tvGender"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="@drawable/table_content_cell_bg"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>